src/game.scss
/* ... */
.tile.coins {
  transform: scale(0.75);
  background-position-x: (-4 * $tileWidth);
  background-position-y: (-4 * $tileHeight);
}

$storeBorder: rgb(113, 65, 59);
$storeBackground: rgb(228, 210, 170);
$itemBorder: rgb(113, 65, 59);
$itemBackground: rgb(244, 210, 156);
$itemDetailBorder: rgb(187, 117, 71);
$itemDetailBackground: rgb(219, 164, 99);

/* MARKET */
.store,
.market,
.info {
  background: $storeBackground;
  border: 0.1rem solid $storeBorder;
  font-size: 1.6rem;

  > .slot {
    margin: 0.1rem;
  }

  > .item {
    justify-content: space-between;

    > .crop {
      align-items: center;
      position: relative;
      padding: 0.2rem 0 0.2rem 0.4rem;

      > .name {
        margin-left: 0.4rem;
      }
    }
  }

  .title {
    font-size: 2.4rem;
  }

  .message {
    font-size: 1.6rem;
    padding: 0.8rem;
  }
}

.slot {
  background-color: $itemBackground;
  border: 0.1rem solid $itemBorder;
  position: relative;

  > *:first-child:before,
  > *:first-child:after,
  > *:last-child:before,
  > *:last-child:after {
    content: '';
    display: inline-block;
    position: absolute;
    width: 0.4rem;
    height: 0.4rem;
    margin: 0.1rem;
    background: $itemDetailBackground;
    border: 0.1rem solid $itemDetailBorder;
  }

  > *:first-child:before {
    top: 0;
    left: 0;
    border-bottom-right-radius: 0.4rem;
  }

  > *:first-child:after {
    bottom: 0;
    left: 0;
    border-top-right-radius: 0.4rem;
  }

  > *:last-child:before {
    top: 0;
    right: 0;
    border-bottom-left-radius: 0.4rem;
  }

  > *:last-child:after {
    bottom: 0;
    right: 0;
    border-top-left-radius: 0.4rem;
  }
}

/* CONTROLS */
.sticker {
  justify-content: center;
  align-items: center;
  width: ($tileWidth / 2);
  height: ($tileHeight / 2);
  background: rgb(18, 32, 32);
  border-radius: 50%;
  font-size: 1.6rem;

  > .inner {
    display: flex;
    justify-content: center;
    align-items: center;
    width: (($tileWidth / 2) - 0.4rem);
    height: (($tileHeight/ 2) - 0.4rem);
    background: rgb(254, 243, 192);
    border-radius: 50%;
  }
}

.picture {
  display: grid;
  grid-template: 50% 50% / 50% 50%;

  > .tool,
  > .crop,
  > .seeds {
    grid-area: 1 / 1 / -1 / -1;
  }

  > .sticker {
    grid-area: 2 / 1 / 2 / 1;
    z-index: 1;
  }

  > .key {
    grid-area: 1 / 2 / 1 / 2;
    margin-left: 1.2rem;
    margin-top: 0.1rem;
  }
}

.key {
  display: grid;
  place-items: center;
  width: 1.2rem;
  height: 1.2rem;
	font-family: 'Lucida Grande', Lucida, Arial, sans-serif;
	cursor: default;
  /*
	border-radius: .2rem;
  background: rgb(255, 255, 255);
  background: linear-gradient(0, rgb(218, 224, 234), rgb(255, 255, 255));
  color: rgb(6, 6, 8);
  text-shadow: 0 0 .2rem rgb(255, 255, 255);
  box-shadow:
  inset 0 0 .1rem rgb(255, 255, 255),
  inset 0 0 .4rem rgb(218, 224, 234),
  0 .1rem 0 rgb(139, 147, 175),
  0 .11rem 0 rgba(6, 6, 8, .4),
  0 .1rem .11rem rgba(6, 6, 8, .9);
  */
}

.inventory {
  background: $storeBackground;
  border: 0.1rem solid $storeBorder;
  padding: 0.1rem;
  user-select: none;

  $itemShadow: rgb(160, 134, 98);
  $itemHighlight: rgb(254, 243, 192);
  $itemActiveShadow: rgb(115, 23, 45);
  $itemActiveHighlight: rgb(180, 32, 42);
  $itemBorderSize: 0.2rem;

  .slot {
    flex-grow: 1;
  }

  .slot .item {
    margin: 0.1rem;
    background: $storeBackground;
    border-top: $itemBorderSize solid $itemShadow;
    border-right: $itemBorderSize solid $itemHighlight;
    border-bottom: $itemBorderSize solid $itemHighlight;
    border-left: $itemBorderSize solid $itemShadow;
    border-radius: 0.4rem;
  }

  .slot .item.active {
    border-top: $itemBorderSize solid $itemActiveHighlight;
    border-right: $itemBorderSize solid $itemActiveShadow;
    border-bottom: $itemBorderSize solid $itemActiveShadow;
    border-left: $itemBorderSize solid $itemActiveHighlight;
  }
}
.controls {
  margin-top: 0.4rem;
  justify-content: space-around;
}

$buttonBackground: rgb(255, 213, 65);
$buttonEdgeLight: rgb(249, 163, 27);
$buttonEdgeDark: rgb(250, 106, 10);
$buttonBorder: rgb(115, 23, 45);
$buttonShadowLight: rgba(74, 84, 98, 0.5);
$buttonShadowDark: rgba(20, 16, 19, 0.5);

.button {
  position: relative;
  display: grid;
  place-items: center;
  font-variant: small-caps;
  font-size: 1.6rem;
  min-width: $tileWidth;
  height: ($tileWidth / 1.618);
  margin: 0.4rem 0.6rem 0.6rem 0.4rem;
  padding: 0 0.8rem;
  background: $buttonBackground;
  border-radius: 0.4rem;
  border-top: 0.1rem solid $buttonEdgeLight;
  border-right: 0.1rem solid $buttonEdgeDark;
  border-bottom: 0.1rem solid $buttonEdgeDark;
  border-left: 0.1rem solid $buttonEdgeLight;
  box-shadow: 0.2rem 0.2rem $buttonShadowDark, 0.4rem 0.4rem $buttonShadowLight;
  transition: all 0.1s ease;
  user-select: none;

  &:before {
    content: '';
    position: absolute;
    top: -0.15rem;
    right: -0.15rem;
    bottom: -0.15rem;
    left: -0.15rem;
    border: 0.1rem solid $buttonBorder;
    border-radius: 0.4rem;
  }

  &:active,
  &.active {
    transform: translate(0.1rem, 0.1rem);
    box-shadow: 0 0 $buttonShadowDark, 0 0 $buttonShadowLight;
  }
}
/* ... */

